set(TARGET_NAME hdf5)


option(HDF5_BUILD_EXAMPLES OFF)
option(HDF5_BUILD_TOOLS OFF)
option(HDF5_BUILD_HL_TOOLS OFF)
option(HDF5_BUILD_UTILS OFF)
option(BUILD_TESTING OFF)
option(BUILD_SHARED_LIBS OFF)
option(HDF5_ENABLE_DEPRECATED_SYMBOLS OFF)
option(HDF5_BUILD_CPP_LIB ON)
option(TEST_SHELL_SCRIPTS OFF)

set(HDF5_INSTALL_INCLUDE_DIR "${CODA_STD_PROJECT_INCLUDE_DIR}/${TARGET_NAME}")
add_subdirectory (hdf5-1.12.2)
